Added pkgdown website

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,8 +23,9 @@ used by the community. Once matured, frequently-used features can be moved to
 the core mizer package.
 
 If you have code for working with mizer that you feel might be useful to other
-mizer users, please email gustav.delius@gmail.com who will discuss how it 
-could be included in this package.
+mizer users, please describe it in [a new issue on the issue
+tracker](https://github.com/sizespectrum/mizerExperimental/issues/new) and we'll
+comment on how it can be included in this package.
 
 ## Installation
 
