--- a/README.Rmd
+++ b/README.Rmd
@@ -47,6 +47,10 @@ that you should always update is the `mizer` package, because the
 recent released version of mizer.
 
 ## Features
+  
+* Functions and a shiny app for interactively tuning parameters.
+
+* A function for keeping egg densities constant.
 
 * `getYieldVsFcurve()` for calculating and plotting yield curve.
 
@@ -58,5 +62,3 @@ recent released version of mizer.
 
 * New wrapper function `newSheldonParams()` that sets up a single species in a
   power-law background.
-  
-* Functions and a shiny app for interactively tuning parameters.
