--- a/README.Rmd
+++ b/README.Rmd
@@ -11,10 +11,10 @@ knitr::opts_chunk$set(
 )
 ```
 
-# mizerExperimental
+# mizerExperimental  <a href='https://sizespectrum.org/mizerExperimental'><img src='man/figures/logo.png' align="right" height="240" /></a>
 
 <!-- badges: start -->
-
+[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 <!-- badges: end -->
 
 This is an extension package for the mizer package (<https://sizespectrum.org/mizer/>) that contains additional features contributed by the mizer community. These features can then be further improved while being used by the community. Once matured, frequently-used features can be moved to the core mizer package.
