Updating README.Rmd for shinyBS package.

--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,15 @@ install.packages("remotes")
 
 before trying again to install `mizerExperimental`.
 
+If this gives an error saying "there is no package called `shinyBS`" then you also need to do
+
+``` r
+install.packages("shinyBS")
+```
+
+before trying again to install `mizerExperimental`.
+
+
 You may be prompted to update some of your existing packages. The one package that you should always update is the `mizer` package, because the `mizerExperimental` package will always be designed to work with the most recent released version of mizer.
 
 Should you get an error message saying something like: "Error: Failed to install `mizerExperimental` from GitHub: (converted from warning) ..." Then you could try
